# controlflowcheck

./: README.md  config.json  pyproject.toml  run_dev.bat  setup.bat
src/: camera_local.py  camera_remote.py  face_recognition.py  face_storage.py  hello_page.py  history_tab.py  main-cam.py  main.py  main3.py
src/modules/: __init__.py
src/modules/cam/: __init__.py  camera_local.py  camera_remote.py  face_recognition.py  face_storage.py  hello_page.py  history_tab.py  main3.py
src/utils/: config.py  requirements_checker.py  system_tray.py
src/views/: camera_view.py  enroll_view.py  home_view.py  list_objects.py  settings_view.py
