[project]
name = "cameradetector"
version = "0.1.0"
description = "Face detection app with Flet UI"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Camera Object developer", email = "doutdex@gmail.com" }
]
dependencies = [
    "flet>=0.28.3",
    "flet-desktop>=0.28.3",
    "opencv-contrib-python==4.8.0.74",
    "numpy>=1.26.4",
    "pillow>=10.0.0",
    "pystray>=0.19.5",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "debugpy>=1.8.0",
]

[tool.poetry]
name = "cameradetector"
version = "0.1.0"
description = "Face detection app with Flet UI"
authors = ["Jean Paul <doutdex@gmail.com>"]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flet = "^0.28.3"
opencv-contrib-python = "4.8.0.74"
numpy = "^1.24.0"
pillow = "^10.0.0"
pystray = "^0.19.5"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
debugpy = "^1.8.0"

[tool.flet]
org = "com.mycompany"
product = "Cameradetector"
company = "ControlFlow"
copyright = "Copyright (C) 2025 by ControlFlow"

[tool.flet.app]
path = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
